--- a/css/style.css
+++ b/css/style.css
@@ -1,149 +1,133 @@
 * {
-    box-sizing: border-box;
-    margin: 0;
-    padding: 0;
-  }
-  
-  h1 {
-    font-size: 24px;
-    font-weight: 500;
-    text-align: center;
-  }
-  
-  .header {
-    padding: 25px 0 10px 0;
-  }
-  
-  .footer {
-    background-color: #EFEFEF;
-    padding: 20px 0 20px 0;
-    text-align: center;
-    font-size: 14px;
-    font-style: italic;
-  }
-  
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
+
+h1 {
+  font-size: 24px;
+  font-weight: 500;
+  text-align: center;
+}
+
+.header {
+  padding: 25px 0 10px 0;
+}
+
+.footer {
+  background-color: #EFEFEF;
+  padding: 20px 0 20px 0;
+  text-align: center;
+  font-size: 14px;
+  font-style: italic;
+}
+
+.content-wrapper {
+  max-width: 960px;
+  width: 100%;
+  margin: 0 auto;
+}
+
+.border-box-container {
+  display: flex;
+  background-color: #EFEFEF;
+  border-top: 5px solid #BFBFBF;
+}
+
+.container {
+  display: grid;
+  grid-auto-flow: row;
+  grid-template-columns: repeat(3, auto);
+}
+
+.card-body {
+  width: 75%;
+}
+
+.button-container button {
+  background-color: #72C3DC;
+  color: #FFFFFF;
+  border: 1px solid #2B8EAD;
+  border-radius: 10px;
+  width: 70%;
+  padding: 15px;
+  margin: 15px 0 0 35px;
+  outline: none;
+  cursor: pointer;
+  box-shadow: 0px 5px 0px #2B8EAD;
+  font-size: 16px;
+  text-align: center;
+}
+
+.card-item {
+  text-align: center;
+  font-size: 80px;
+  color: #FFFFFF;
+  padding: 45px;
+}
+.card-item.card-2, .card-item.card-4 {
+  background-color: #2B8EAD;
+}
+.card-item.card-3, .card-item.card-5, .card-item.card-9 {
+  background-color: #2F454E;
+}
+.card-item.card-6, .card-item.card-7 {
+  background-color: #BFBFBF;
+}
+.card-item.card-1, .card-item.card-8 {
+  background-color: #6F98A8;
+}
+
+@media screen and (max-width: 768px) {
   .content-wrapper {
-    max-width: 960px;
-    width: 100%;
-    margin: 0 auto;
+    border: 8px solid #000000;
+    border-radius: 5px;
   }
-  
+  .header {
+    background-color: #333333;
+    color: #FFFFFF;
+    padding: 15px 0 8px 0;
+  }
+  .footer {
+    background-color: #FFFFFF;
+  }
   .border-box-container {
-    display: flex;
-    background-color: #EFEFEF;
-    border-top: 5px solid #BFBFBF;
+    background-color: #FFFFFF;
+    flex-direction: column-reverse;
   }
   .container {
-    display: grid;
-    grid-auto-flow: row;
-    grid-template-columns: repeat(3, auto);
+    grid-template-columns: auto;
   }
-  
-  .card-body {
-    width: 75%;
+  .button-container {
+    display: flex;
+    margin: 15px 45px 25px 45px;
+    width: auto;
   }
-  
   .button-container button {
-    background-color: #72C3DC;
-    color: #FFFFFF;
-    border: 1px solid #2B8EAD;
-    border-radius: 10px;
-    width: 70%;
+    margin: 0 8px 0 8px;
+  }
+  .card-body {
+    width: 100%;
+  }
+  .card-body .card-item {
+    width: 90%;
+    margin: 0 0 5px 15px;
     padding: 15px;
-    margin: 15px 0 0 35px;
-    outline: none;
-    cursor: pointer;
-    box-shadow: 0px 5px 0px #2B8EAD;
-    font-size: 16px;
-    text-align: center;
+    background-color: #EFEFEF;
+    color: #333333;
+    font-weight: 700;
+    font-size: 1em;
   }
-  
-  .card-item {
-    text-align: center;
-    font-size: 80px;
-    color: #FFFFFF;
-    padding: 45px;
+  .card-body .card-item.card-2, .card-body .card-item.card-4 {
+    border-left: 10px solid #2B8EAD;
   }
-  
-  .card-item.card-2,
-  .card-item.card-4 {
-    background-color: #2B8EAD;
+  .card-body .card-item.card-3, .card-body .card-item.card-5, .card-body .card-item.card-9 {
+    border-left: 10px solid #2F454E;
   }
-  
-  .card-item.card-3,
-  .card-item.card-5,
-  .card-item.card-9 {
-    background-color: #2F454E;
+  .card-body .card-item.card-6, .card-body .card-item.card-7 {
+    border-left: 10px solid #BFBFBF;
   }
-  
-  .card-item.card-6,
-  .card-item.card-7 {
-    background-color: #bfbfbf;
+  .card-body .card-item.card-1, .card-body .card-item.card-8 {
+    border-left: 10px solid #6F98A8;
   }
-  
-  .card-item.card-1,
-  .card-item.card-8 {
-    background-color: #6f98a8;
-  }
-  @media screen and (max-width: 768px) {
-    .content-wrapper {
-      border: 8px solid #000000;
-      border-radius: 5px;
-    }
-    .header {
-      background-color: #333333;
-      color: #ffffff;
-      padding: 15px 0 8px 0;
-    }
-    .footer {
-      background-color: #ffffff;
-    }
-    .border-box-container {
-      background-color: #ffffff;
-      flex-direction: column-reverse;
-    }
-    .container {
-      grid-template-columns: auto;
-    }
-    .button-container {
-      display: flex;
-      margin: 15px 45px 25px 45px;
-      width: auto;
-    }
-    .button-container button {
-      margin: 0 8px 0 8px;
-    }
-    .card-body {
-      width: 100%;
-    }
-    .card-body .card-item {
-      width: 90%;
-      margin: 0 0 5px 15px;
-      padding: 15px;
-      background-color: #efefef;
-      color: #333333;
-      font-weight: 700;
-      font-size: 1em;
-    }
-  
-    .card-item.card-2,
-    .card-item.card-4 {
-      border-left: 10px solid #2b8ead;
-    }
-  
-    .card-item.card-3,
-    .card-item.card-5,
-    .card-item.card-9 {
-      border-left: 10px solid #2f454e;
-    }
-  
-    .card-item.card-6,
-    .card-item.card-7 {
-      border-left: 10px solid #bfbfbf;
-    }
-  
-    .card-item.card-1,
-    .card-item.card-8 {
-      border-left: 10px solid #6f98a8;
-    }
-  }
+}/*# sourceMappingURL=style.css.map */
